# DXMClib

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  clang-format.txt
data/: CMakeLists.txt  atomicelement.cpp  atomicshell.cpp  epicsparser.cpp  main.cpp
data/EPICSParser/: atomicelement.cpp  atomicelementhandler.cpp  epicsparcermain.cpp  epicsparser.cpp  hartreeFockProfiles_0.csv  main.cpp  standarddensities.csv
data/EPICSParser/include/: atomicelement.hpp  atomicelementhandler.hpp  atomicshell.hpp  epicsparser.hpp
data/include/: atomicelement.hpp  atomicshell.hpp  epicsparser.hpp  serialize.hpp
data/phantomdata/icrp145/: icrp145organs.csv
docs/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: about.rst  conf.py  index.rst  license.rst  physicsmodel.rst
docs/sphinx/source/: conf.py  index.rst
examples/: CMakeLists.txt
examples/PMMA/: CMakeLists.txt  pmma.cpp
examples/carm/: CMakeLists.txt  carm.cpp  carmctdi.cpp  phantomreader.cpp  phantomreader.hpp
examples/carm/data/: blanket.stl  carmCarm.stl  carmCeilingShield.stl  carmTable.stl
examples/pencilbeam/: CMakeLists.txt  pencilbeam.cpp
include/: dxmc.h  dxmc.hpp
include/dxmc/: attenuationinterpolator.h  attenuationinterpolator.hpp  attenuationlut.h  attenuationlut.hpp  beamfilters.h  beamfilters.hpp  betheHeitlerCrossSection.h  betheHeitlerCrossSection.hpp  constants.h  constants.hpp  dxmcrandom.h  dxmcrandom.hpp  exposure.h  exposure.hpp  floating.h  floating.hpp  interactions.hpp  interpolation.h  interpolation.hpp  lowenergycorrectionmodel.h  material.h  material.hpp  particle.h  particle.hpp  particletracker.hpp  progressbar.h  progressbar.hpp  source.h  source.hpp  transport.h  transport.hpp  transport_old.hpp  transportprogress.hpp  tube.h  tube.hpp  tube_calculations.h  vectormath.h  vectormath.hpp  world.h  world.hpp
include/dxmc/beams/: beamtype.hpp  cbctbeam.hpp  ctdibeam.hpp  ctsequentialbeam.hpp  ctspiralbeam.hpp  ctspiraldualenergybeam.hpp  dxbeam.hpp  isotropicbeam.hpp  isotropicbeamcircle.hpp  isotropicmonoenergybeam.hpp  isotropicmonoenergybeamcircle.hpp  pencilbeam.hpp
include/dxmc/beams/filters/: bowtiefilter.hpp  ctaecfilter.hpp  ctorganaecfilter.hpp
include/dxmc/beams/tube/: betheHeitlerCrossSection.hpp  tube.hpp
include/dxmc/material/: atomhandler.hpp  atomicelement.hpp  atomicshell.hpp  atomserializer.hpp  massenergytransfer.hpp  material.hpp  nistmaterials.hpp
include/dxmc/world/: baseobject.hpp  baseworld.hpp  box.hpp  ctdiphantom.hpp  dosescore.hpp  energyscore.hpp  intersection.hpp  intersectsimpleobjects.hpp  itemcollection.hpp  kdtree.hpp  kdtreeflat.hpp  kdtreeinteractionresult.hpp  kdtreeintersectionresult.hpp  sphere.hpp  statickdtree.hpp  triangle.hpp  triangulatedmesh.hpp  visualizationintersectionresult.hpp  world.hpp  worldintersectionresult.hpp  worlditembase.hpp
include/dxmc/world/basicshapes/: aabb.hpp  cylinder.hpp  cylinderz.hpp  sphere.hpp  tetrahedron.hpp
include/dxmc/world/triangulatedmesh/: meshkdtree.hpp  triangle.hpp  triangulatedmesh.hpp
include/dxmc/world/visualization/: geometry.hpp  visualizeworld.hpp  vizualizationprops.hpp
include/dxmc/world/worlditems/: aavoxelgrid.hpp  ctdiphantom.hpp  depthdose.hpp  enclosedroom.hpp  fluencescore.hpp  tetrahedalmesh.hpp  triangulatedmesh.hpp  triangulatedopensurface.hpp  worldbox.hpp  worldboxgrid.hpp  worldcylinder.hpp  worlditembase.hpp  worlditemtype.hpp  worldsphere.hpp
include/dxmc/world/worlditems/tetrahedalmesh/: tetrahedalmeshgrid.hpp  tetrahedalmeshintersectionresult.hpp  tetrahedalmeshkdtree.hpp  tetrahedalmeshreader.hpp  tetrahedron.hpp
include/dxmc/world/worlditems/thetrahedalmesh/: thetrahedron.hpp
include/dxmc/world/worlditems/triangulatedmesh/: meshkdtree.hpp  stlreader.hpp  triangle.hpp  triangulatedmesh.hpp  triangulatedmeshkdtree.hpp  triangulatedmeshkdtreeflat.hpp  triangulatedmeshkdtreetype.hpp  triangulatedmeshstlreader.hpp
src/: attenuationlut.cpp  beamfilters.cpp  dxmcrandom.cpp  exposure.cpp  material.cpp  source.cpp  transport.cpp  tube.cpp  world.cpp
tests/: CMakeLists.txt  benchmark.cpp  loadxraylib.cpp  testattenuationlut.cpp  testbasicshapes.cpp  testbeamfilters.cpp  testbeams.cpp  testbowtiefilter.cpp  testctaecfilter.cpp  testctdiphantom.cpp  testdxmclib.cpp  testexposure.cpp  testflatkdtree.cpp  testfluencescore.cpp  testinteractions.cpp  testinterpolation.cpp  testintersection.cpp  testitemcollection.cpp  testkdtree.cpp  testmassenergytransfer.cpp  testmaterial.cpp  testmaterialAtomCoeffVis.py  testmaterials.cpp  testrandom.cpp  testreadSTL.cpp  testsource.cpp  teststatickdtree.cpp  testtetrahedalmesh.cpp  testtransport.cpp  testtriangulatedmesh.cpp  testtube.cpp  testutils.h  testvectormath.cpp  testvisualization.cpp  testworld.cpp  testworlditembase.cpp  testworlditems.cpp  testworldsphere.cpp  validatedxmclib.cpp
validation/: CMakeLists.txt  scatterPlots.py  scattervalidation.cpp  tg195world3breast.hpp  tg195world42.hpp  validation.cpp  validationPlots.py
validation/data/: tiffToBin.py
