

add_executable(validation validation.cpp tg195world42.hpp tg195world3breast.hpp)
target_link_libraries(validation libdxmc)

add_executable(scattervalidation scattervalidation.cpp)
target_link_libraries(scattervalidation libdxmc)

## Adding post build step to copy physicslist.bin to validation folder
dxmclib_add_physics_list(validation)
dxmclib_add_physics_list(scattervalidation)

set(DATA_PATH "${CMAKE_CURRENT_SOURCE_DIR}/data")
set(CASE5WORLD_BINARY "case5world.bin")
set(CASE5WORLD_COMPRESSED "case5world.tar.gz")

if(EXISTS "${DATA_PATH}/${CASE5WORLD_BINARY}")
	# If this binary file is in sources we compress it
	execute_process(COMMAND
	  ${CMAKE_COMMAND} -E tar -czvf ${CASE5WORLD_COMPRESSED} ${CASE5WORLD_BINARY}
	  WORKING_DIRECTORY ${DATA_PATH}
	  )
	# Then we delete it
	file(REMOVE "${DATA_PATH}/${CASE5WORLD_BINARY}")
endif()

add_custom_command(TARGET validation POST_BUILD
	COMMENT "Extracting case 5 world ${DATA_PATH}/${CASE5WORLD_COMPRESSED}."
	DEPENDS ${CASE5WORLDFILE}
	COMMAND ${CMAKE_COMMAND} -E tar -xvzf "${DATA_PATH}/${CASE5WORLD_COMPRESSED}" ${CASE5WORLD_BINARY}
	WORKING_DIRECTORY $<TARGET_FILE_DIR:validation>
	)

set(PLOTSCRIPT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/validationPlots.py")
add_custom_command(TARGET validation POST_BUILD
	COMMENT "Copying plotting script ${PLOTSCRIPT_PATH}."
	DEPENDS ${PLOTSCRIPT_PATH}
    COMMAND ${CMAKE_COMMAND} -E copy ${PLOTSCRIPT_PATH} validationPlots.py
	WORKING_DIRECTORY $<TARGET_FILE_DIR:validation>
	)

set(PLOTSCRIPTSCATTER_PATH "${CMAKE_CURRENT_SOURCE_DIR}/scatterPlots.py")
add_custom_command(TARGET scattervalidation POST_BUILD
	COMMENT "Copying plotting script ${PLOTSCRIPTSCATTER_PATH}."
	DEPENDS ${PLOTSCRIPTSCATTER_PATH}
    COMMAND ${CMAKE_COMMAND} -E copy ${PLOTSCRIPTSCATTER_PATH} scatterPlots.py
	WORKING_DIRECTORY $<TARGET_FILE_DIR:scattervalidation>
	)